--- a/index.html
+++ b/index.html
@@ -34,11 +34,11 @@
         <div class="card-info">
           <div class="icon-with-text info-text">
             <img src="./images/icon-ethereum.svg" alt="icon-ethereum" />
-            <p class="cyan-text">&nbsp0.041 ETH</p>
+            <p class="cyan-text">&nbsp;0.041 ETH</p>
           </div>
           <div class="icon-with-text info-text">
             <img src="./images/icon-clock.svg" alt="icon-clock" />
-            <p class="light-blue-text">&nbsp3 days left</p>
+            <p class="light-blue-text">&nbsp;3 days left</p>
           </div>
         </div>
         <hr class="card-divider" />
@@ -49,7 +49,7 @@
             class="avatar-image"
           />
           <p class="light-blue-text">
-            &nbsp&nbsp&nbsp Creation of
+            &nbsp;&nbsp;&nbsp;Creation of
             <span class="white-text">Jules Wyvern</span>
           </p>
         </div>
